<?xml version="1.0"?>
<package format="3">
  <name>robot_behaviour</name>
  <version>0.1.0</version>
  <description>Simple robot behaviour package (obstacle avoidance + FSM)</description>
  <maintainer email="student@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
